--- a/website.html
+++ b/website.html
@@ -46,6 +46,7 @@
 <!-- <script src="/js/tut19.js"></script> -->
 <!-- <script src="/js/tut20.js"></script> -->
 <!-- <script src="/js/tut23.js"></script> -->
-<script src="/js/tut24.js"></script>
+<!-- <script src="/js/tut24.js"></script> -->
 <!-- <script src="/js/tut25.js"></script> -->
+<script src="/js/tut27.js"></script>
 </html>
