--- a/Project1/index.html
+++ b/Project1/index.html
@@ -59,9 +59,12 @@
       <!-- step 3-> we want something jisme hum card ko dikha ske : better card -->
       <div class="card" style="width: 18rem">
         <div class="card-body">
-          <h5 class="card-title">Add a Note</h5>
+          <div class="form-group">
+            <h5 class="card-title">Add Title</h5>
+            <input type="text" class="form-control" id="addTitle" aria-describedby="emailHelp" placeholder="Enter title">
+          </div>
+          <h5 class="card-title">Add a Note</h5>        
           <!-- step4 -> remove paragraph and lekr aayege text wala area which is in form -->
-
           <div class="form-group">
             <textarea class="form-control" id="addTxt" rows="3"></textarea>
             <!-- <label for="floatingTextarea">Comments</label> -->
