--- a/website.html
+++ b/website.html
@@ -49,5 +49,6 @@
 <!-- <script src="/js/tut24.js"></script> -->
 <!-- <script src="/js/tut25.js"></script> -->
 <!-- <script src="/js/tut27.js"></script> -->
-<script src="/js/tut28.js"></script>
+<!-- <script src="/js/tut28.js"></script> -->
+<script src="/js/tut29.js"></script>
 </html>
