upto tut 31.js ES6 Class and Inheritance

--- a/website.html
+++ b/website.html
@@ -50,5 +50,6 @@
 <!-- <script src="/js/tut25.js"></script> -->
 <!-- <script src="/js/tut27.js"></script> -->
 <!-- <script src="/js/tut28.js"></script> -->
-<script src="/js/tut30.js"></script>
+<!-- <script src="/js/tut30.js"></script> -->
+<script src="/js/tut31.js"></script>
 </html>
