rev 5 upto type conversion and type coercision

--- a/website.html
+++ b/website.html
@@ -36,6 +36,7 @@
    <div class="no">this is dummy div2</div>
    <div class="no">this is dummy div3</div>
    <!-- <script src="/js/tut2.js"></script> -->
+   <script src="/js/tut5.js"></script>
     <!-- <script src="/js/tut12.js"></script> -->
     <!-- <script src="/js/tut14.js"></script> -->
 </body>
@@ -53,5 +54,5 @@
 <!-- <script src="/js/tut30.js"></script> -->
 <!-- <script src="/js/tut31.js"></script> -->
 <!-- <script src="/js/tut32.js"></script> -->
-<script src="/js/tut34.js"></script>
+<!-- <script src="/js/tut34.js"></script> -->
 </html>
