--- a/website.html
+++ b/website.html
@@ -36,7 +36,10 @@
    <div class="no">this is dummy div2</div>
    <div class="no">this is dummy div3</div>
    <!-- <script src="/js/tut2.js"></script> -->
-   <script src="/js/tut5.js"></script>
+   <!-- <script src="/js/tut5.js"></script> -->
+     <!-- <script src="/js/tut6.js"></script> -->
+     <!-- <script src="/js/tut7.js"></script> -->
+     <!-- <script src="/js/tut9.js"></script> -->
     <!-- <script src="/js/tut12.js"></script> -->
     <!-- <script src="/js/tut14.js"></script> -->
 </body>
